--- a/Big_Data_Mini_Project.ipynb
+++ b/Big_Data_Mini_Project.ipynb
@@ -812,9 +812,145 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 41,
+      "metadata": {
+        "id": "V_4jxYDfXn37"
+      },
+      "outputs": [],
+      "source": [
+        "import re\n",
+        "import nltk\n",
+        "from nltk.corpus import stopwords\n",
+        "from nltk.stem import WordNetLemmatizer"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 50,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GiaiJAYIX6nZ",
+        "outputId": "7719a490-125e-4807-8860-d1e204ab6cc5"
+      },
+      "outputs": [
+        {
+          "name": "stderr",
+          "output_type": "stream",
+          "text": [
+            "[nltk_data] Downloading package punkt to /root/nltk_data...\n",
+            "[nltk_data]   Package punkt is already up-to-date!\n",
+            "[nltk_data] Downloading package stopwords to /root/nltk_data...\n",
+            "[nltk_data]   Package stopwords is already up-to-date!\n",
+            "[nltk_data] Downloading package wordnet to /root/nltk_data...\n"
+          ]
+        },
+        {
+          "data": {
+            "text/plain": [
+              "True"
+            ]
+          },
+          "execution_count": 50,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
+      "source": [
+        "nltk.download('punkt')\n",
+        "nltk.download('stopwords')\n",
+        "nltk.download('wordnet')"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 44,
       "metadata": {
         "id": "5tO_V-YtWb8r"
+      },
+      "outputs": [],
+      "source": [
+        "def predict_sentiment(sentence):\n",
+        "    # Preprocess the sentence\n",
+        "    preprocessed_sentence = preprocess_sentence(sentence)\n",
+        "    \n",
+        "    # Vectorize the preprocessed sentence using TF-IDF vectorizer\n",
+        "    sentence_vector = vectorizer.transform([preprocessed_sentence])\n",
+        "    \n",
+        "    # Predict the sentiment using the trained classifier\n",
+        "    sentiment_prediction = clf.predict(sentence_vector)[0]\n",
+        "    \n",
+        "    return sentiment_prediction"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 43,
+      "metadata": {
+        "id": "XJhJIUEFXiTD"
+      },
+      "outputs": [],
+      "source": [
+        "def preprocess_sentence(sentence):\n",
+        "    # Convert to lowercase\n",
+        "    sentence = sentence.lower()\n",
+        "    \n",
+        "    # Remove special characters and numbers\n",
+        "    sentence = re.sub(r\"[^a-zA-Z\\s]\", \"\", sentence)\n",
+        "    \n",
+        "    # Tokenize the sentence\n",
+        "    tokens = nltk.word_tokenize(sentence)\n",
+        "    \n",
+        "    # Remove stop words\n",
+        "    stop_words = set(stopwords.words(\"english\"))\n",
+        "    tokens = [token for token in tokens if token not in stop_words]\n",
+        "    \n",
+        "    # Lemmatization\n",
+        "    lemmatizer = WordNetLemmatizer()\n",
+        "    tokens = [lemmatizer.lemmatize(token) for token in tokens]\n",
+        "    \n",
+        "    # Join the tokens back into a sentence\n",
+        "    preprocessed_sentence = \" \".join(tokens)\n",
+        "    \n",
+        "    return preprocessed_sentence"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": 53,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "wMVIqGd8Xlap",
+        "outputId": "1bd85748-e552-48ff-963f-2e7a80d57435"
+      },
+      "outputs": [
+        {
+          "name": "stdout",
+          "output_type": "stream",
+          "text": [
+            "Enter a sentence: this is a bad sentence \n",
+            "This is a negative sentiment and the accuracy is 80.2121875\n"
+          ]
+        }
+      ],
+      "source": [
+        "input_sentence = input(\"Enter a sentence: \")\n",
+        "sentiment = predict_sentiment(input_sentence)\n",
+        "if sentiment==0:\n",
+        "  print(f\"This is a negative sentiment and the accuracy is {accuracy*100}\")\n",
+        "else:\n",
+        "  print(f\"This is a positive sentiment and the accuracy is {accuracy*100}\")\n",
+        "  \n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "hW-4qCcEX0v2"
       },
       "outputs": [],
       "source": []
